# milk-bank-system

./: DATABASE_MIGRATION.md  Dockerfile  FRONTEND_SETUP.md  INSTALLATION_UBUNTU.md  README-IMPLEMENTATION.md  README.md  READY_FOR_USE.md  TESTING_GUIDE.md  docker-compose.yml  migrate_add_batch_columns.py  migrate_bottle_status.py  pyproject.toml  requirements.txt  start-linux.sh  start.sh  stop-linux.sh  stop.sh  test_defrost_datetime.py  test_state_machines_validation.py
.github/workflows/: ci.yml
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  version.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AddDonation.tsx  BatchDetail.tsx  Batches.tsx  Bottles.tsx  Dashboard.tsx  Dispatch.tsx  DispatchDetail.tsx  Donors.tsx  EditDonor.tsx  NewBatch.tsx  NewDonor.tsx  NewDonor_old.tsx  PrinterSettings.tsx  ViewDonor.tsx
frontend/src/styles/: index.css
src/: migrate_add_donation_fields.py  migrate_schema.py
src/app/: api.py  barcode.py  crud.py  database.py  labels.py  main.py  models.py  models_old.py  printer.py  schemas.py  schemas_old.py  state_machines.py
src/app/templates/: manifest.html
tests/: conftest.py  test_api.py  test_barcode.py  test_constraints.py  test_dispatch.py  test_dispatch_manifest.py  test_pasteurisation.py  test_state_machines.py
